# nexus-rich-discord

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
src/: lib.rs  mumble_data.rs  rich_presence_core.rs
