[package]
name = "nexus-rich-discord"
description = "A discord rich presence addon for GW2 Nexus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "nexus_rich_discord"

[dependencies]
arcdps-imgui = "0.8.0"
bitmask-enum = "2.2.3"
discord-sdk = "0.3.5"
once_cell = { version = "1.18.0", features = [] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.0", features = ["full"] }
lazy_static = { version = "1.4.0", features = [] }
log = "0.4.20"
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2.150"

[dependencies.mumblelink_reader]
git = "https://github.com/norbert-k/mumblelink_reader"
rev = "cea63c813c2e30c0f1b56d106284814a695369fd"

[dependencies.nexus-rs]
git = "https://github.com/belst/raidcore_bindings-rs"
rev = "423e14136e2adec56ba392e2db4e0e61f8507de5"

[dependencies.windows]
version = "0.52.0"
features = ["Win32_System_LibraryLoader", "Win32_Foundation", "Win32_System_SystemServices", "Win32_UI_WindowsAndMessaging", "Win32_UI"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"
